adding a few new videos to the video page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     <title>Eric Willard</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/ico" href="../Images/ewillicon3.png">
+    <link rel="icon" type="image/ico" href="../images/ewillicon3.png">
     <!-- Your custom styles (optional) -->
     <link href="/css/style.css" rel="stylesheet">
     <!--Google Font-->
@@ -47,9 +47,6 @@
     <!-- jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-    
-    <!-- Wikipedia API -->
-    <!-- <link rel="EditURI" type="application/rsd+xml" href="https://wikitravel.org/wiki/en/api.php?action=rsd"/> -->
     
     <!-- Javascript files -->
     <script rel="stylesheet" src="/js/app.js" type="text/javascript"></script>
