--- a/views/video.hbs
+++ b/views/video.hbs
@@ -6,37 +6,37 @@
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.linkedin.com/in/willarderic/">
-                <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
+                <img src="images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.github.com/ewill20">
-                <img src="Images/githubicon.png" alt="github" class="github" style="height: 55px; width: 55px">
+                <img src="images/githubicon.png" alt="github" class="github" style="height: 55px; width: 55px">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://stackoverflow.com/users/8011910/e-dub">
-                <img src="Images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 55px; width: 55px;">
+                <img src="images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.500px.com/ewill20">
-                <img src="Images/500px.png" alt="500px" class="500px" style="height: 60px; width: 60px;">
+                <img src="images/500px.png" alt="500px" class="500px" style="height: 60px; width: 60px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.viewbug.com/member/ewill">
-                <img src="Images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 55px; width: 55px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
+                <img src="images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 55px; width: 55px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.instagram.com/ewill20">
-                <img src="Images/InstagramNew.png" alt="Instagram" class="Instagram" style="height: 55px; width: 55px;">
+                <img src="images/InstagramNew.png" alt="Instagram" class="Instagram" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.youtube.com/channel/UCJ75p4PUoM-ZbQvO5B-iZ7w?view_as=subscriber">
-                <img src="Images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 55px; width: 55px;">
+                <img src="images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 55px; width: 55px;">
             </a>
         </li>
     </ul>
@@ -69,25 +69,25 @@
 
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
-        <li class="nav-item list-item-inline">
+        <li class="nav-item list-inline-item">
             <a class="nav-link" href="/videoCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
-        <li class="nav-item list-item-inline">
+        <li class="nav-item list-inline-item">
             <a class="nav-link" href="/videoDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
-        <li class="nav-item list-item-inline">
+        <li class="nav-item list-inline-item">
             <a class="nav-link" href="/videoFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
-        <li class="nav-item list-item-inline">
+        <li class="nav-item list-inline-item">
             <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
         </li>
-        <li class="nav-item list-item-inline">
+        <li class="nav-item list-inline-item">
             <a class="nav-link glyphicon glyphicon-envelope" href="/contact"></a>
         </li>
-        <li class="nav-item list-item-inline">
+        <li class="nav-item list-inline-item">
             <a class="nav-link glyphicon glyphicon-book" href="/about"></a>
         </li>
     </ul>
@@ -97,14 +97,51 @@
 <!--End Navbar-->
 <div class="container-fluid">
     <div class="row" style="margin-bottom: 60px;">
+        
+        <!--Start NYE Video-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card video" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/mpDkmM211UQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+                    <div class="card-title">
+                        <p id="card-text">New Year's Eve Social Scene Bar Crawl - Full (Kansas City, Mo 2019/2020)</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End NYE Panel-->
+
+        <!--Start NYE Teaser Video-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card video" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/1_658MI5LYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">New Year's Eve Social Scene Bar Crawl - Teaser (Kansas City, Mo 2019/2020)</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End NYE Teaser Panel-->
+
+        <!--Start Drone Video-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card video" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/kz5rXtngucQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Huff 'n Puff by Drone (Kansas 2019)</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End Drone Panel-->
+    </div>
+    <div class="row">
         <!--Start Zhangjiajie Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
-            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+            <div class="card video" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available" height="251px" src="https://www.youtube.com/embed/JAaR5Rurdf4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Zhangjiajie National Forest Park by Drone (2016)</p>
+                        <p id="card-text">Zhangjiajie National Forest Park by Drone in 4K (China 2016)</p>
                     </div>
             </div></a>
         </div>
@@ -112,9 +149,8 @@
 
         <!--Start Fullerton College Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-            <!--Video Panel-->
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
-                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
                         <p id="card-text">Fullerton College Study Abroad Video (Berlin 2011)</p>
@@ -122,14 +158,15 @@
             </div></a>
         </div>
         <!--End Full Coll Panel-->
-
-        <!--Start Dance Class Video-->
+   
+    </div>
+    
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
-                    <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/2pFM2N1JNPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/z7KHWpZpYDo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fullerton College Dance Class Video (2010)</p>
+                        <p id="card-text">Bier Drei - UCSD German Class Project (California 2014)</p>
                     </div>
             </div></a>
         </div>
@@ -137,34 +174,53 @@
     <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
-                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/z7KHWpZpYDo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                    <div class="card-title">
-                        <p id="card-text">Bier Drei - UCSD German Class Project (2014)</p>
-                    </div>
-            </div></a>
-        </div>
-
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
-            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/Q2_wPRxTdUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Euro College: Paris Study Abroad Introduction (2012)</p>
+                        <p id="card-text">Euro College: Paris Study Abroad Introduction (California 2012)</p>
                     </div>
             </div></a>
         </div>
-    
+
+        <!--Start BryLisRayJuMoi-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/K5sO8ph_gxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">BryLisRayJuMoi - Video of Our Excursions (Europe 2011)</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End BryLisRayJuMoi-->
+    </div>
+
+    <!--Start Dance Class Video-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/2pFM2N1JNPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Fullerton College Dance Class Video (California 2010)</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End Dance Class Video-->
+    </div>
+    <div class="row">
+        <!--Start Fear and Loathing Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/1kc-M1j0bS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fear and Loathing in Las Vegas Project (2010)</p>
+                        <p id="card-text">Fear and Loathing in Las Vegas Project (California 2010)</p>
                     </div>
             </div></a>
         </div>
-    </div> 
+        <!--End Fear and Loathing-->
+
+    </div>
 </div>
 <footer class="footer blue-gradient-rgba">
     © Eric Willard
