--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,18 +16,12 @@
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
 
-    <!-- Material Design Bootstrap -->
-    <!-- <link href="/MDB/css/mdb.min.css" rel="stylesheet">
-    <link rel='stylesheet' id='ajax-auth-style-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/ajax-auth-style.css?ver=4.8.2'
-        type='text/css' media='all' />
-    <link rel='stylesheet' id='compiled.css-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled.min.css?ver=4.4.0'
-        type='text/css' media='all' /> -->
     <!-- Flag Icons-->
     <link rel="stylesheet" type="text/css" href="../flag-icon-css-master/css/flag-icon.css">
     <link rel="stylesheet" type="text/css" href="../flag-icon-css-master/css/flag-icon.min.css">
     <!-- Your custom styles (optional) -->
     <link href="/css/style.css" rel="stylesheet">
-    
+    <link href="/css/@media.css" rel="stylesheet">
     <!-- Bootstrap & Material Design Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../MDB/css/bootstrap.min.css">
@@ -50,7 +44,35 @@
     
     <!-- Javascript files -->
     <script rel="stylesheet" src="/js/app.js" type="text/javascript"></script>
-
+    <style>
+    #container {
+      width: 600px;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      position: relative;
+    }
+ 
+    .circle {
+      border-radius: 50%;
+      background-color: deepskyblue;
+      width: 150px;
+      height: 150px;
+      position: absolute;
+      opacity: 0;
+    }
+ 
+    .item {
+      z-index: 100;
+      padding: 5px;
+    }
+ 
+    .item img {
+      width: 150px;
+    }
+  </style>
 </head>
 
 <body>
